--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,13 @@ a {
   text-decoration: none;
 }
 
+.section__padding {
+  padding: 3rem 6rem;
+}
+
+.section__margin{
+  margin: 3rem 6rem;
+}
 
 .gradient__bg {
   background:-moz-radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 25%);
